refactoring html documentation